Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46312

getUniform doesn't work if shader contains struct or array uniforms

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.5.0 RC
    • 5.5.0 Beta
    • Canvas3D
    • None
    • 4e12621a91df91305a4ac2a74c5724a949577d2d

      getUniform doesn't work if shader contains struct or array uniforms

        For Gerrit Dashboard: QTBUG-46312
        # Subject Branch Project Status CR V

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes