Fix getUniform for array and struct uniforms.

Change-Id: I8d30feb99efbb4340a89ef32376dbf7a49e5905c
Task-number: QTBUG-46312
Reviewed-by: Pasi Keränen <pasi.keranen@digia.com>